@@ -33,8 +33,6 @@ int Main(int, char**);
 
 int main(int argc, char* argv[])
 {
-  return Main(argc, argv);
-
   try
   {
     return Main(argc, argv);
